# Artificial-Neural-Network

./: .gitignore  .pdm-python  README.md  pyproject.toml
documentation/: ANN_docs.ipynb
src/: main.py  params.py  propagation.py  utils.py
src/dataset/: __init__.py  clean.py  mnist.py  mnist_dataset.py
src/input/: image.py
src/neural_network/: __init__.py  function.py  params.pkl  params.py  persist.py  propagation.py  solve.py  test.py  train.py
