[project]
name = "Artificial-Neural-Network"
version = "0.1.0"
description = "Default template for PDM package"
dependencies = ["requests>=2.32.4", "tensorflow>=2.19.0", "numpy>=2.1.3", "matplotlib>=3.10.3", "tensorflow-datasets>=4.9.9"]
requires-python = "==3.12.*"
readme = "README.md"


[tool.pdm]
distribution = false
